Enhance README with project details and instructions
Added detailed project overview, gameplay mechanics, features, and instructions for running the BattleshipFX game.